--- a/index.html
+++ b/index.html
@@ -13,40 +13,38 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-aos-easing="ease" data-aos-duration="700" data-aos-delay="0">
-
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container flex-lg-column">
             <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
                 <span class="h3 fw-medium d-block d-lg-none" style="color: black;">Nandhakumar V</span>
-                <img src="./Assets/images/person.jpg" class="d-none d-lg-block rounded-circle" alt="">
+                <img src="./assets/images/person.jpg" class="d-none d-lg-block rounded-circle" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #fdd142;">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto flex-lg-column text-lg-center">
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#education">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">Academic Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#skills">skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#contact">Contact</a>
-                    </li>
-
-                </ul>
-            </div>
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #fdd142;">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto flex-lg-column text-lg-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="#home" onclick="closeNavbar()">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#education" onclick="closeNavbar()">Education</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects" onclick="closeNavbar()">Academic Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#skills" onclick="closeNavbar()">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact" onclick="closeNavbar()">Contact</a>
+                </li>
+            </ul>
         </div>
     </nav>
+
+    
     <div id="content-wrapper">
         <section id="home" class="full-height px-lg-5">
 
